Ensure Legend doesn't get too big

--- a/react-frontend/src/css/Legend.css
+++ b/react-frontend/src/css/Legend.css
@@ -12,6 +12,12 @@ fieldset.Legend legend {
     padding: 0 1em;
 }
 
+
+fieldset.Legend img {
+    max-width: min(100%, 200px);
+    max-height: min(100%, 200px);
+}
+
 fieldset.Legend p.no-overlay {
     align-self: center;
     justify-self: center;
